@@ -17,7 +17,7 @@
         } else {
             data = jQuery.extend({}, data);
         }
-        function add_name_suffix(name){
+        function add_name_suffix(name, context){
             if (!data.model || !data.ids) {
                 return jQuery.when(name);
             }
@@ -96,7 +96,7 @@
                 params.icon = action['icon.rec_name'] || '';
 
                 if (action.keyword) {
-                    name_prm = add_name_suffix(action.name);
+                    name_prm = add_name_suffix(action.name, params.context);
                 }
                 name_prm.then(function(name) {
                     params.name = name;
@@ -110,7 +110,7 @@
                 params.window = action.window;
                 name_prm = jQuery.when(action.name);
                 if ((action.keyword || 'form_action') === 'form_action') {
-                    name_prm = add_name_suffix(action.name);
+                    name_prm = add_name_suffix(action.name, context);
                 }
                 name_prm.done(function(name) {
                     params.name = name;
